@@ -1,6 +1,7 @@
 Giraph Change Log
 
 Release 0.2.0 - unreleased
+  GIRAPH-215: Update site to use Giraph logo and remove 'incubator' text (ekoontz)
 
   GIRAPH-205: Move Giraph jar to root level of tar.gz. 
   (Roman Shaposhnik via jghoman)
